[project]
name = "turbines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "nfast", email = "mail@nilsfast.com" }]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "jinja2-simple-tags>=0.6.1",
    "markdown>=3.10",
    "typer>=0.20.0",
    "watchdog>=6.0.0",
]

[project.scripts]
turbines = "turbines:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
